--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,8 @@ jobs:
 
       - name: Install requried packages in a lambda layer
         run: |
+          python -m pip install poetry==1.5.0
+
           mkdir -p .build/common_layer 
           poetry export --without=dev --without-hashes --format=requirements.txt > .build/common_layer/requirements.txt
 
