--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,10 +34,14 @@ jobs:
           role-session-name: github-action-role
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Install dependencies
+      - name: Install dependencies for cdk
         run: npm install -g aws-cdk
+      
+      - name: Install required packages for cdk
+        run: |
+          pip install -r requirements.txt   
 
-      - name: Install requried packages in a lambda layer
+      - name: Install required packages for a lambda layer
         run: |
           python -m pip install poetry==1.5.0
 
