--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,10 +45,10 @@ jobs:
         run: |
           python -m pip install poetry==1.5.0
 
-          mkdir -p .build/common_layer 
+          mkdir -p .build/common_layer/python 
           poetry export --without=dev --without-hashes --format=requirements.txt > .build/common_layer/requirements.txt
 
-          pip install -r  .build/common_layer/requirements.txt -t .build/common_layer
+          pip install -r  .build/common_layer/requirements.txt -t .build/common_layer/python
       
       - name: Synth stack
         run: cdk synth
